--- a/index.html
+++ b/index.html
@@ -15,30 +15,13 @@
             <div class="header__navbar">
                 <div class="grid">
                     <div class="header__navbar-logo">
-                        <img src="./assets/img/logo.png" alt="" class="header__navbar-logo-img">
+                        <a href="index.html">
+                            <img src="./assets/img/logo.png" alt="" class="header__navbar-logo-img">
+                        </a>
                     </div>
 
                     <div class="header__navbar-menu">
                         <ul class="header__navbar-list">
-                            <li class="header__navbar-item header__navbar-item-bicycle">
-                                Xe đạp
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                <div class="header__navbar-bicycle">
-                                    <h4>Loại Xe</h4>
-
-                                    <ul class="header__navbar-type">
-                                        <li class="header__navbar-bicycle-item">
-                                            <a href="">Xe đạp đường phố</a>
-                                        </li>
-                                        <li class="header__navbar-bicycle-item">
-                                            <a href="">Xe đạp địa hình</a>
-                                        </li>
-                                        <li class="header__navbar-bicycle-item">
-                                            <a href="">Xe đạp fixed gear</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
                             <li class="header__navbar-item header__navbar-item-motobike">
                                 Xe máy
                                 <i class="header__navbar-icon ti-angle-down"></i>
@@ -90,7 +73,7 @@
                                     </ul>
                             </li>
                             <li class="header__navbar-item">
-                                <a href="" class="header__navbar-agency">Đại lý</a>
+                                <a href="daily.html" class="header__navbar-agency">Đại lý</a>
                             </li>
                             <li class="header__navbar-item">
                                 <a href="" class="header__navbar-promotion">Khuyến mại</a>
@@ -278,72 +261,6 @@
                             </div>
                         </div>
 
-                        <!-- List Bike -->
-                        <div class="container__vehicle">
-                            <h4 class="heading">Các mẫu xe đạp</h4>
-                            <ul class="vehicle-list__type">
-                                <li class="vehicle-list__item vehicle-list__item--active">
-                                    Tất cả
-                                </li>
-                                <li class="vehicle-list__item">
-                                    Xe đạp đường phố
-                                </li>
-                                <li class="vehicle-list__item">
-                                    Xe đạp địa hình
-                                </li>
-                                <li class="vehicle-list__item">
-                                    Xe đạp fiexd gear
-                                </li>
-                            </ul>
-                            
-                            <div class="grid__row">
-                                <div class="grid__column-3">
-                                    <div class="vehicle-item">
-                                        <div class="vehicle-img" 
-                                            style="background-image: url(./assets/img/bike_duongpho-1.jpg);"
-                                            onmouseout="this.style.backgroundImage='url(./assets/img/bike_duongpho-1.jpg)'"
-                                            onmouseover="this.style.backgroundImage='url(./assets/img/bike_duongpho-1_hover.jpg)'" >
-                                        </div>
-                                        <h4 class="vehicle-name">Xe đạp touring RAPTOR Lily 3</h4>
-                                        <span class="vehicle-price">Từ 2.790.000 VNĐ</span>
-                                    </div>
-                                </div>
-                                <div class="grid__column-3">
-                                    <div class="vehicle-item">
-                                        <div class="vehicle-img" 
-                                            style="background-image: url(./assets/img/bike_diahinh-1.jpg);"
-                                            onmouseout="this.style.backgroundImage='url(./assets/img/bike_diahinh-1.jpg)'"
-                                            onmouseover="this.style.backgroundImage='url(./assets/img/bike_diahinh-1_hover.jpg)'" >
-                                        </div>
-                                        <h4 class="vehicle-name">Xe đạp đua địa hình MTB RAPTOR Marlin 3</h4>
-                                        <span class="vehicle-price">Từ 10.790.000 VNĐ</span>
-                                    </div>
-                                </div>
-                                <div class="grid__column-3">
-                                    <div class="car-item">
-                                        <div class="vehicle-img" 
-                                            style="background-image: url(./assets/img/bike_diahinh-2.jpg);"
-                                            onmouseout="this.style.backgroundImage='url(./assets/img/bike_diahinh-2.jpg)'"
-                                            onmouseover="this.style.backgroundImage='url(./assets/img/bike_diahinh-2_hover.jpg)'" >
-                                        </div>
-                                        <h4 class="vehicle-name">Xe đạp đường phố TOURING RAPTOR Napa</h4>
-                                        <span class="vehicle-price">Từ 7.590.000 VNĐ</span>
-                                    </div>
-                                </div>
-                                <div class="grid__column-3">
-                                    <div class="vehicle-item">
-                                        <div class="vehicle-img" 
-                                        style="background-image: url(./assets/img/bike_fixedgear-1.jpg);"
-                                            onmouseout="this.style.backgroundImage='url(./assets/img/bike_fixedgear-1.jpg)'"
-                                            onmouseover="this.style.backgroundImage='url(./assets/img/bike_fixedgear-1_hover.jpg)'" >
-                                        </div>
-                                        <h4 class="vehicle-name">Xe đạp đường phố Fixed Gear VINBIKE Maximus</h4>
-                                        <span class="vehicle-price">Từ 4.990.000 VNĐ</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                         <div class="container__section">
                             <h3>Khuyến mại & Dịch vụ</h3>
                             <div class="grid__row">
@@ -445,7 +362,6 @@
                     Github
                 </a>
             </div>
-            
         </div>
         <div class="go-to-header">
             <i class="go-to-header-icon ti-arrow-up"></i>
